Fix form size and add all US states to dropdown

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="header-content">
                 <div class="logo">
                     <img src="logo.svg" alt="VIN REPORT" class="logo-img">
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
     </header>
 
     <!-- Hero Section -->
@@ -41,7 +41,7 @@
                     <div class="search-tabs">
                         <button class="tab-btn active" data-tab="vin">VIN</button>
                         <button class="tab-btn" data-tab="plate">Номер</button>
-                    </div>
+            </div>
                     
                     <div class="tab-content active" id="vin-tab">
                         <form class="search-form">
@@ -55,16 +55,62 @@
                                 <span class="btn-icon">→</span>
                             </button>
                         </form>
-                    </div>
+          </div>
                     
                     <div class="tab-content" id="plate-tab">
                         <form class="search-form">
                             <select class="search-select">
                                 <option>Выберите штат</option>
+                                <option>Alabama</option>
+                                <option>Alaska</option>
+                                <option>Arizona</option>
+                                <option>Arkansas</option>
                                 <option>California</option>
-                                <option>Texas</option>
+                                <option>Colorado</option>
+                                <option>Connecticut</option>
+                                <option>Delaware</option>
                                 <option>Florida</option>
+                                <option>Georgia</option>
+                                <option>Hawaii</option>
+                                <option>Idaho</option>
+                                <option>Illinois</option>
+                                <option>Indiana</option>
+                                <option>Iowa</option>
+                                <option>Kansas</option>
+                                <option>Kentucky</option>
+                                <option>Louisiana</option>
+                                <option>Maine</option>
+                                <option>Maryland</option>
+                                <option>Massachusetts</option>
+                                <option>Michigan</option>
+                                <option>Minnesota</option>
+                                <option>Mississippi</option>
+                                <option>Missouri</option>
+                                <option>Montana</option>
+                                <option>Nebraska</option>
+                                <option>Nevada</option>
+                                <option>New Hampshire</option>
+                                <option>New Jersey</option>
+                                <option>New Mexico</option>
                                 <option>New York</option>
+                                <option>North Carolina</option>
+                                <option>North Dakota</option>
+                                <option>Ohio</option>
+                                <option>Oklahoma</option>
+                                <option>Oregon</option>
+                                <option>Pennsylvania</option>
+                                <option>Rhode Island</option>
+                                <option>South Carolina</option>
+                                <option>South Dakota</option>
+                                <option>Tennessee</option>
+                                <option>Texas</option>
+                                <option>Utah</option>
+                                <option>Vermont</option>
+                                <option>Virginia</option>
+                                <option>Washington</option>
+                                <option>West Virginia</option>
+                                <option>Wisconsin</option>
+                                <option>Wyoming</option>
                             </select>
                             <input type="text" 
                                    class="search-input" 
@@ -74,27 +120,27 @@
                                 <span class="btn-icon">→</span>
                             </button>
                         </form>
-                    </div>
-                </div>
+              </div>
+            </div>
 
                 <!-- Trust Badge -->
                 <div class="trust-badge">
                     <div class="badge-item">
                         <span class="badge-icon">⭐</span>
                         <span class="badge-text">Trustpilot 4.8/5</span>
-                    </div>
+                  </div>
                     <div class="badge-item">
                         <span class="badge-icon">🔒</span>
                         <span class="badge-text">NMVTIS Approved</span>
-                    </div>
+                </div>
                     <div class="badge-item">
                         <span class="badge-icon">📊</span>
                         <span class="badge-text" id="reportsToday">523+ отчётов сегодня</span>
-                    </div>
-                </div>
+              </div>
             </div>
+          </div>
         </div>
-    </section>
+      </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -137,18 +183,18 @@
                     </ul>
                     <div class="footer-badge">
                         <p><strong>NMVTIS Approved Provider</strong></p>
-                    </div>
-                </div>
             </div>
+          </div>
+        </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 VIN REPORT. Все права защищены.</p>
                 <div class="footer-social">
                     <a href="#">Facebook</a>
                     <a href="#">Twitter</a>
                     <a href="#">Instagram</a>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
     </footer>
 
     <script src="script.js"></script>
