Add VIN TRUST logo to header

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="logo.svg" alt="VIN REPORT" class="logo-img">
-          </div>
+                    <img src="logo-vin-trust.png" alt="VIN TRUST" class="logo-img">
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 
     <!-- Hero Section -->
