Add logo click to scroll to top on both desktop and mobile

--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <div class="logo">
+                <a href="#hero" class="logo">
                     <img src="logo-vin-trust.png" alt="VIN TRUST" class="logo-img">
-                </div>
-            </div>
+                </a>
         </div>
+      </div>
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">
