Update hero title with VIN and price highlighted in button color

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    Узнайте полную историю<br>
-                    <span class="gradient-text">любого автомобиля</span>
+                    Самый полный <span class="gradient-text">VIN</span>-отчёт всего за <span class="gradient-text">$3</span>
                 </h1>
                 <p class="hero-subtitle">
                     Получите детальный отчет с проверкой по базам данных США. Аварии, пробег, залоги и многое другое в одном отчете.
