Update hero subtitle with detailed 70+ checkpoints description

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     Самый полный <span class="gradient-text">VIN</span>-отчёт всего за <span class="gradient-text">$3</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Получите детальный отчет с проверкой по базам данных США. Аварии, пробег, залоги и многое другое в одном отчете.
+                    Более 70 пунктов проверки — от скрытых аварий и сервисной истории до залогов, пробегов, штрафов и записей DMV. Самая глубокая проверка автомобиля в США за минуту
                 </p>
 
                 <!-- Search Form -->
