Add example placeholders for VIN and license plate inputs

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <form class="search-form">
                             <input type="text" 
                                    class="search-input" 
-                                   placeholder="Введите VIN номер"
+                                   placeholder="1HGBH41JXMN109186"
                                    maxlength="17"
                                    id="vinInput">
                             <button type="submit" class="btn btn-search">
@@ -237,7 +237,7 @@
                             </select>
                             <input type="text" 
                                    class="search-input" 
-                                   placeholder="Введите номер">
+                                   placeholder="ABC1234">
                             <button type="submit" class="btn btn-search">
                                 <span class="btn-text">Проверить</span>
                                 <span class="btn-icon">→</span>
