Revert to original subtitle text

--- a/index.html
+++ b/index.html
@@ -155,36 +155,9 @@
                 <h1 class="hero-title">
                     Самый полный <span class="gradient-text">VIN</span>-отчёт всего за <span class="gradient-text">$3</span>
                 </h1>
-                <div class="hero-features">
-                    <div class="feature-item">
-                        <span class="feature-icon">🚗💥</span>
-                        <span class="feature-text">Скрытые аварии</span>
-          </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🔧📋</span>
-                        <span class="feature-text">Сервисная история</span>
-        </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🏦🔒</span>
-                        <span class="feature-text">Залоги</span>
-            </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">📊🛣️</span>
-                        <span class="feature-text">Пробеги</span>
-          </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">🚨💰</span>
-                        <span class="feature-text">Штрафы</span>
-        </div>
-                    <div class="feature-item">
-                        <span class="feature-icon">📄🏛️</span>
-                        <span class="feature-text">Записи DMV</span>
-                  </div>
-                    <div class="feature-item highlight">
-                        <span class="feature-icon">⚡</span>
-                        <span class="feature-text">И многое другое!</span>
-              </div>
-            </div>
+                <p class="hero-subtitle">
+                    Более 70 пунктов проверки — от скрытых аварий и сервисной истории до залогов, пробегов, штрафов и записей DMV. Самая глубокая проверка автомобиля в США за минуту
+                </p>
 
                 <!-- Search Form -->
                 <div class="search-container">
