--- a/index.html
+++ b/index.html
@@ -159,36 +159,36 @@
                     <div class="feature-item">
                         <span class="feature-icon">70</span>
                         <span class="feature-text">Более 70 пунктов проверки</span>
-          </div>
+                    </div>
                     <div class="feature-item">
-                        <span class="feature-icon">!</span>
+                        <span class="feature-icon">💥</span>
                         <span class="feature-text">Скрытые аварии</span>
-        </div>
+                    </div>
                     <div class="feature-item">
-                        <span class="feature-icon">⚙</span>
+                        <span class="feature-icon">🔧</span>
                         <span class="feature-text">Сервисная история</span>
-            </div>
+                    </div>
                     <div class="feature-item">
-                        <span class="feature-icon">$</span>
+                        <span class="feature-icon">🔒</span>
                         <span class="feature-text">Залоги</span>
-          </div>
+                    </div>
                     <div class="feature-item">
-                        <span class="feature-icon">⏱</span>
+                        <span class="feature-icon">📊</span>
                         <span class="feature-text">Пробеги</span>
-        </div>
+                    </div>
                     <div class="feature-item">
-                        <span class="feature-icon">⚠</span>
+                        <span class="feature-icon">🚨</span>
                         <span class="feature-text">Штрафы</span>
-                  </div>
+                    </div>
                     <div class="feature-item">
-                        <span class="feature-icon">📋</span>
+                        <span class="feature-icon">📄</span>
                         <span class="feature-text">Записи DMV</span>
-                </div>
+                    </div>
                     <div class="feature-item highlight">
                         <span class="feature-icon">⚡</span>
                         <span class="feature-text">Самая глубокая проверка автомобиля в США за минуту</span>
-              </div>
-            </div>
+                    </div>
+                </div>
 
                 <!-- Search Form -->
                 <div class="search-container">
