Restore original form with 'Отправить' button and original sizes

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                    maxlength="17"
                                    id="vinInput">
                             <button type="submit" class="btn btn-search">
-                                <span class="btn-text">Проверить</span>
+                                <span class="btn-text">Отправить</span>
                                 <span class="btn-icon">→</span>
                             </button>
                         </form>
@@ -238,7 +238,7 @@
                                    class="search-input" 
                                    placeholder="ABC1234">
                             <button type="submit" class="btn btn-search">
-                                <span class="btn-text">Проверить</span>
+                                <span class="btn-text">Отправить</span>
                                 <span class="btn-icon">→</span>
                             </button>
                         </form>
