Create unified form exactly like reference images

--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
                   </div>
                     
                     <div class="tab-content active" id="vin-tab">
-                        <form class="search-form">
+                        <div class="unified-form">
                             <input type="text" 
-                                   class="search-input" 
+                                   class="form-input" 
                                    placeholder="1HGBH41JXMN109186"
                                    maxlength="17"
                                    id="vinInput">
-                            <button type="submit" class="btn btn-search">
-                                <span class="btn-text">Отправить</span>
-                                <span class="btn-icon">→</span>
+                            <button type="submit" class="form-button">
+                                <span class="button-text">Проверить</span>
+                                <span class="button-arrow">→</span>
                             </button>
-                        </form>
+                        </div>
                 </div>
                     
                     <div class="tab-content" id="plate-tab">
-                        <form class="search-form">
-                            <select class="search-select">
+                        <div class="unified-form">
+                            <select class="form-select">
                                 <option>Выберите штат</option>
                                 <option>Alabama</option>
                                 <option>Alaska</option>
@@ -235,13 +235,13 @@
                                 <option>Wyoming</option>
                             </select>
                             <input type="text" 
-                                   class="search-input" 
+                                   class="form-input" 
                                    placeholder="ABC1234">
-                            <button type="submit" class="btn btn-search">
-                                <span class="btn-text">Отправить</span>
-                                <span class="btn-icon">→</span>
+                            <button type="submit" class="form-button">
+                                <span class="button-text">Проверить</span>
+                                <span class="button-arrow">→</span>
                             </button>
-                        </form>
+                        </div>
                     </div>
             </div>
 
