Add form exactly like reference image

--- a/index.html
+++ b/index.html
@@ -155,6 +155,26 @@
                 <h1 class="hero-title">
                     Самый полный <span class="gradient-text">VIN</span>-отчёт всего за <span class="gradient-text">$3</span>
                 </h1>
+                
+                <!-- Search Form -->
+                <div class="search-form-container">
+                    <div class="search-form">
+                        <div class="form-left">
+                            <div class="state-selector">
+                                <span class="state-text">Выберите штата</span>
+                                <span class="dropdown-arrow">▼</span>
+                            </div>
+                            <div class="input-field">
+                                <span class="input-text">ABC1234</span>
+                            </div>
+                        </div>
+                        <div class="form-right">
+                            <span class="button-text">Проверить</span>
+                            <span class="button-arrow">→</span>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="hero-features">
                 </div>
 
