Change title to two lines with yellow highlights and left alignment

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    Самый полный <span class="gradient-text">VIN</span>-отчёт всего за <span class="gradient-text">$3</span>
+                    Полный <span class="gradient-text">VIN</span> REPORT<br>
+                    Всего за <span class="gradient-text">$3</span>
                 </h1>
                 
                 <!-- Search Form -->
@@ -167,13 +168,13 @@
                             <div class="input-field">
                                 <span class="input-text">ABC1234</span>
                             </div>
-                        </div>
+          </div>
                         <div class="form-right">
                             <span class="button-text">Проверить</span>
                             <span class="button-arrow">→</span>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </div>
+      </div>
                 
                 <div class="hero-features">
                 </div>
