Add subtitle about checking car history before purchase

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                 Всего за <span class="yellow-text">$3</span>
             </h1>
             
+            <p class="subtitle">Не рискуй деньгами — проверь реальную историю машины перед покупкой.</p>
+            
             <div class="search-form-container">
                 <div class="mode-buttons">
                     <button class="mode-btn" data-mode="vin">VIN</button>
