Add triangle divider between hero and next section with wide center angle

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
         </div>
     </section>
 
+    <!-- Triangle Divider -->
+    <div class="triangle-divider"></div>
+
     <!-- Why Choose VIN TRUST Section -->
     <section class="why-choose-section">
         <div class="container">
