Replace Toyota Corolla with damaged white SUV (Honda CR-V) from screenshot

--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
                         <div class="report-card">
                             <div class="report-header">
                                 <div class="car-image">
-                                    <img src="https://via.placeholder.com/300x180/2c3e50/ffffff?text=2018+TOYOTA+COROLLA" alt="2018 Toyota Corolla">
+                                    <img src="https://via.placeholder.com/300x180/ffffff/000000?text=WHITE+SUV+DAMAGED" alt="White SUV with Front End Damage">
                                 </div>
                                 <div class="car-info">
-                                    <h4>2018 TOYOTA COROLLA</h4>
+                                    <h4>WHITE SUV - DAMAGED</h4>
                                     <div class="car-details">
-                                        <span class="car-year">2018</span>
-                                        <span class="car-make">Toyota</span>
-                                        <span class="car-model">Corolla LE</span>
+                                        <span class="car-year">2012</span>
+                                        <span class="car-make">Honda</span>
+                                        <span class="car-model">CR-V</span>
                                     </div>
                                     <div class="vin-info">
                                         <span class="vin-label">VIN:</span>
@@ -314,13 +314,14 @@
                                 <div class="issue-item critical">
                                     <div class="issue-header">
                                         <span class="issue-icon">💥</span>
-                                        <span class="issue-title">Столкновение</span>
+                                        <span class="issue-title">Left Front End Damage</span>
                                         <span class="issue-severity">КРИТИЧНО</span>
                                     </div>
                                     <div class="issue-details">
-                                        <p>Зарегистрировано столкновение с повреждением передней части</p>
-                                        <div class="issue-date">Дата: 15.03.2020</div>
-                                        <div class="issue-damage">Ущерб: $8,500</div>
+                                        <p>Severe front-end damage with detached bumper and exposed engine components</p>
+                                        <div class="issue-date">Date: 05/14/2012</div>
+                                        <div class="issue-damage">Est. repair cost: $20,000</div>
+                                        <div class="issue-status">Status: Junk and Salvage / To Be Determined</div>
                                     </div>
                                 </div>
                                 
