--- a/index.html
+++ b/index.html
@@ -241,6 +241,15 @@
         </div>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <img src="logo.svg" alt="VIN REPORT" class="footer-logo">
+                    <p>Премиальный сервис проверки истории автомобилей с мощными инструментами для частных лиц и компаний.</p>
+                </div>
+                <div class="footer-col">
                     <h4>Инструменты</h4>
                     <ul class="footer-links">
                         <li><a href="#">VIN Check</a></li>
