Clear entire second screen content

--- a/index.html
+++ b/index.html
@@ -245,43 +245,7 @@
     <section class="why-choose-section">
         <div class="container">
             <div class="why-choose-content">
-                <div class="why-choose-left">
-                    <h2 class="section-title">Почему выбирают VIN TRUST?</h2>
-                    
-                    <div class="feature-block">
-                        <div class="feature-icon-block">
-                            <span class="feature-icon-large">🏛️</span>
-                        </div>
-                        <div class="feature-text-block">
-                            <h3>Официальные, проверенные данные</h3>
-                            <p>VIN TRUST — официальный NMVTIS-провайдер, предлагающий безопасные и надежные отчеты об истории автомобилей, соответствующие высшим отраслевым стандартам.</p>
-                        </div>
-                    </div>
-
-                    <div class="feature-block">
-                        <div class="feature-icon-block">
-                            <span class="feature-icon-large">📋</span>
-                        </div>
-                        <div class="feature-text-block">
-                            <h3>Комплексные инструменты и отчеты</h3>
-                            <p>VIN TRUST предоставляет проверки VIN, записи о титулах, калькуляторы кредитов и поиск отзывов, чтобы помочь вам принимать уверенные решения при покупке автомобиля.</p>
-                        </div>
-                    </div>
-
-                    <div class="feature-block">
-                        <div class="feature-icon-block">
-                            <span class="feature-icon-large">👥</span>
-                        </div>
-                        <div class="feature-text-block">
-                            <h3>Создано для всех</h3>
-                            <p>VIN TRUST предоставляет мощные инструменты, неограниченные проверки и бесшовный доступ на настольных компьютерах или мобильных устройствах для потребителей, дилеров или предприятий.</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="why-choose-right">
-                    <!-- Пустая правая часть -->
-                </div>
+                <!-- Пустая секция -->
             </div>
         </div>
     </section>
