Add only image to right side of second screen

--- a/index.html
+++ b/index.html
@@ -245,7 +245,13 @@
     <section class="why-choose-section">
         <div class="container">
             <div class="why-choose-content">
-                <!-- Пустая секция -->
+                <div class="why-choose-left">
+                    <!-- Пустая левая часть -->
+                </div>
+
+                <div class="why-choose-right">
+                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="White SUV with Front End Damage" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
             </div>
         </div>
     </section>
