Add placeholder for damaged car image

--- a/index.html
+++ b/index.html
@@ -250,7 +250,14 @@
                 </div>
 
                 <div class="why-choose-right">
-                    <img src="https://images.unsplash.com/photo-1544966503-7cc5ac882d5f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Damaged White SUV" style="width: 100%; height: auto; border-radius: 12px;">
+                    <div style="width: 100%; height: 400px; background: linear-gradient(135deg, #f0f0f0 0%, #e0e0e0 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 2px dashed #ccc;">
+                        <div style="text-align: center; color: #666;">
+                            <div style="font-size: 48px; margin-bottom: 16px;">🚗💥</div>
+                            <div style="font-size: 18px; font-weight: bold;">Damaged White SUV</div>
+                            <div style="font-size: 14px; margin-top: 8px;">Honda CR-V 2012</div>
+                            <div style="font-size: 12px; margin-top: 4px;">Front End Damage</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
