--- a/index.html
+++ b/index.html
@@ -250,12 +250,55 @@
                 </div>
 
                 <div class="why-choose-right">
-                    <div style="width: 100%; height: 400px; background: linear-gradient(135deg, #f0f0f0 0%, #e0e0e0 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; border: 2px dashed #ccc;">
-                        <div style="text-align: center; color: #666;">
-                            <div style="font-size: 48px; margin-bottom: 16px;">🚗💥</div>
-                            <div style="font-size: 18px; font-weight: bold;">Damaged White SUV</div>
-                            <div style="font-size: 14px; margin-top: 8px;">Honda CR-V 2012</div>
-                            <div style="font-size: 12px; margin-top: 4px;">Front End Damage</div>
+                    <div class="mobile-app-interface">
+                        <!-- Изображение поврежденного автомобиля -->
+                        <div class="car-image-container">
+                            <div class="damaged-car-image">
+                                <div class="car-damage-overlay">
+                                    <div class="damage-indicator left-front">💥</div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!-- Информационные карточки -->
+                        <div class="info-cards">
+                            <!-- Первая карточка - Damage Summary -->
+                            <div class="info-card damage-summary">
+                                <div class="card-left">
+                                    <div class="card-icon">🚗🔧</div>
+                                    <div class="card-text">
+                                        <div class="card-label">Damage type</div>
+                                        <div class="card-value">Left Front End</div>
+                                    </div>
+                                </div>
+                                <div class="card-right">
+                                    <div class="card-icon">🔧🛠️</div>
+                                    <div class="card-text">
+                                        <div class="card-label">Est. repair cost</div>
+                                        <div class="card-value">$20,000</div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- Вторая карточка - Detail Information -->
+                            <div class="info-card detail-info">
+                                <div class="detail-row">
+                                    <span class="detail-label">ENTITY:</span>
+                                    <span class="detail-value">Intertrade Inc., Bridgeview, IL</span>
+                                </div>
+                                <div class="detail-row">
+                                    <span class="detail-label">EXP:</span>
+                                    <span class="detail-value">No</span>
+                                </div>
+                                <div class="detail-row">
+                                    <span class="detail-label">DETAIL:</span>
+                                    <span class="detail-value">Junk and Salvage / Vehicle state: To Be Determined</span>
+                                </div>
+                                <div class="detail-row">
+                                    <span class="detail-label">Date:</span>
+                                    <span class="detail-value">05/14/2012</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
