--- a/index.html
+++ b/index.html
@@ -256,6 +256,12 @@
                             <div class="damaged-car-image">
                                 <div class="car-damage-overlay">
                                     <div class="damage-indicator left-front">💥</div>
+                                    <div class="damage-indicator right-front">💥</div>
+                                </div>
+                                <div class="car-info-overlay">
+                                    <div class="car-model">Honda CR-V</div>
+                                    <div class="car-year">2017-2022</div>
+                                    <div class="damage-status">Severe Front End Damage</div>
                                 </div>
                             </div>
                         </div>
