Replace complex block with simple image only

--- a/index.html
+++ b/index.html
@@ -250,58 +250,7 @@
                 </div>
 
                 <div class="why-choose-right">
-                    <div class="mobile-app-interface">
-                        <!-- Изображение поврежденного автомобиля -->
-                        <div class="car-image-container">
-                            <div class="damaged-car-image">
-                                <div class="car-damage-overlay">
-                                    <div class="damage-indicator left-front">💥</div>
-                                    <div class="damage-indicator right-front">💥</div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <!-- Информационные карточки -->
-                        <div class="info-cards">
-                            <!-- Первая карточка - Damage Summary -->
-                            <div class="info-card damage-summary">
-                                <div class="card-left">
-                                    <div class="card-icon">🚗🔧</div>
-                                    <div class="card-text">
-                                        <div class="card-label">Damage type</div>
-                                        <div class="card-value">Left Front End</div>
-                                    </div>
-                                </div>
-                                <div class="card-right">
-                                    <div class="card-icon">🔧🛠️</div>
-                                    <div class="card-text">
-                                        <div class="card-label">Est. repair cost</div>
-                                        <div class="card-value">$20,000</div>
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <!-- Вторая карточка - Detail Information -->
-                            <div class="info-card detail-info">
-                                <div class="detail-row">
-                                    <span class="detail-label">ENTITY:</span>
-                                    <span class="detail-value">Intertrade Inc., Bridgeview, IL</span>
-                                </div>
-                                <div class="detail-row">
-                                    <span class="detail-label">EXP:</span>
-                                    <span class="detail-value">No</span>
-                                </div>
-                                <div class="detail-row">
-                                    <span class="detail-label">DETAIL:</span>
-                                    <span class="detail-value">Junk and Salvage / Vehicle state: To Be Determined</span>
-                                </div>
-                                <div class="detail-row">
-                                    <span class="detail-label">Date:</span>
-                                    <span class="detail-value">05/14/2012</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <img src="https://cs.copart.com/v1/AUTH_svc.pdoc00001/ids-c-prod-lpp/0825/659310c744474908abae5aab82ef984d_hrs.jpg" alt="Damaged Car" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
             </div>
         </div>
