--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
 
                 <div class="why-choose-right">
-                    <!-- Пустая правая часть -->
+                    <img src="https://cs.copart.com/v1/AUTH_svc.pdoc00001/ids-c-prod-lpp/0825/659310c744474908abae5aab82ef984d_hrs.jpg" alt="iPhone Screenshot" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
             </div>
         </div>
