Add damaged car image to left side of second screen

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="container">
             <div class="why-choose-content">
                 <div class="why-choose-left">
-                    <!-- Пустая левая часть -->
+                    <img src="images/damaged-car.jpg" alt="Damaged Car" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
 
                 <div class="why-choose-right">
