Add Honda CR-V good condition image as third column

--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
         <div class="container">
             <div class="why-choose-content">
                 <div class="why-choose-left">
+                    <img src="images/honda-crv-good.jpg" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
+
+                <div class="why-choose-center">
                     <img src="images/damaged-car.jpg" alt="Damaged Car" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
 
