--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="container">
             <div class="why-choose-content">
                 <div class="why-choose-left">
-                    <img src="images/honda-crv-good.jpg" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
+                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
 
                 <div class="why-choose-center">
