Move iPhone screenshot 20% to the left

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </div>
 
                 <div class="why-choose-right">
-                    <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 80%; height: auto; border-radius: 12px;">
+                    <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 80%; height: auto; border-radius: 12px; margin-left: 20%;">
                 </div>
             </div>
         </div>
