--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
                     <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
 
-                <div class="why-choose-right" style="margin-left: -20%;">
-                    <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 80%; height: auto; border-radius: 12px;">
+                <div class="why-choose-right" style="width: 80%;">
+                    <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
             </div>
         </div>
