Revert to original layout - two separate columns

--- a/index.html
+++ b/index.html
@@ -244,10 +244,13 @@
     <!-- Why Choose VIN TRUST Section -->
     <section class="why-choose-section">
         <div class="container">
-            <div class="why-choose-content" style="position: relative;">
+            <div class="why-choose-content">
+                <div class="why-choose-left">
+                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
+
                 <div class="why-choose-right" style="width: 80%;">
                     <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 100%; height: auto; border-radius: 12px;">
-                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="position: absolute; bottom: 0; left: -30%; width: 60%; height: auto; border-radius: 12px; z-index: -1;">
                 </div>
             </div>
         </div>
