Revert to original two-column layout

--- a/index.html
+++ b/index.html
@@ -244,15 +244,14 @@
     <!-- Why Choose VIN TRUST Section -->
     <section class="why-choose-section">
         <div class="container">
-            <div class="why-choose-content" style="position: relative; height: 600px; overflow: hidden;">
-                <!-- iPhone с отчетом - передний план слева -->
-                <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="position: absolute; left: 10%; top: 50%; transform: translateY(-50%); width: 200px; height: auto; border-radius: 12px; z-index: 3;">
-                
-                <!-- Поврежденная машина - за iPhone, частично скрыта -->
-                <img src="https://cs.copart.com/v1/AUTH_svc.pdoc00001/ids-c-prod-lpp/0825/659310c744474908abae5aab82ef984d_hrs.jpg" alt="Damaged Car" style="position: absolute; left: 25%; top: 50%; transform: translateY(-50%); width: 300px; height: auto; border-radius: 12px; z-index: 2;">
-                
-                <!-- Целая машина - задний план справа -->
-                <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="position: absolute; right: 10%; top: 50%; transform: translateY(-50%); width: 250px; height: auto; border-radius: 12px; z-index: 1;">
+            <div class="why-choose-content">
+                <div class="why-choose-left">
+                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
+
+                <div class="why-choose-right" style="width: 80%;">
+                    <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
             </div>
         </div>
     </section>
