--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <div class="container">
             <div class="why-choose-content" style="position: relative;">
                 <div class="why-choose-right" style="width: 80%;">
-                    <img src="images/iphone-screenshot.jpg" alt="iPhone Screenshot" style="width: 70%; height: auto; border-radius: 12px; position: relative; z-index: 2;">
+                    <img src="images/iphone-screenshot.png" alt="iPhone Screenshot" style="width: 70%; height: auto; border-radius: 12px; position: relative; z-index: 2;">
                     <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="position: absolute; top: 20%; left: -20%; width: 80%; height: auto; border-radius: 12px; z-index: 1;">
                 </div>
             </div>
