--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
     <!-- Why Choose VIN TRUST Section -->
     <section class="why-choose-section">
         <div class="container">
-            <div class="why-choose-content" style="position: relative;">
-                <div class="why-choose-right" style="width: 80%;">
+            <div class="why-choose-content" style="position: relative; display: flex; justify-content: flex-end;">
+                <div class="why-choose-right" style="width: 80%; position: relative;">
                     <img src="images/iphone-screenshot.png" alt="iPhone Screenshot" style="width: 70%; height: auto; border-radius: 12px; position: relative; z-index: 2;">
                     <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="position: absolute; top: 20%; left: 15%; width: 110%; height: auto; border-radius: 12px; z-index: 1;">
                 </div>
