--- a/index.html
+++ b/index.html
@@ -244,10 +244,13 @@
     <!-- Why Choose VIN TRUST Section -->
     <section class="why-choose-section">
         <div class="container">
-            <div class="why-choose-content" style="position: relative;">
+            <div class="why-choose-content">
+                <div class="why-choose-left">
+                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
+
                 <div class="why-choose-right" style="width: 80%;">
-                    <img src="images/iphone-screenshot.png" alt="iPhone Screenshot" style="width: 70%; height: auto; border-radius: 12px; position: relative; z-index: 2;">
-                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="position: absolute; top: 20%; left: 25%; width: 78%; height: auto; border-radius: 12px; z-index: 1;">
+                    <img src="images/iphone-screenshot.png" alt="iPhone Screenshot" style="width: 100%; height: auto; border-radius: 12px;">
                 </div>
             </div>
         </div>
