--- a/index.html
+++ b/index.html
@@ -245,8 +245,13 @@
     <section class="why-choose-section">
         <div class="container">
             <div class="why-choose-content">
-                <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 25%; height: auto; border-radius: 12px;">
-                <img src="images/iphone-screenshot.png" alt="iPhone Screenshot" style="width: 20%; height: auto; border-radius: 12px;">
+                <div class="why-choose-left">
+                    <img src="images/honda-crv-good.png" alt="Honda CR-V Good Condition" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
+
+                <div class="why-choose-right" style="width: 80%;">
+                    <img src="images/iphone-screenshot.png" alt="iPhone Screenshot" style="width: 100%; height: auto; border-radius: 12px;">
+                </div>
             </div>
         </div>
     </section>
