Add iPhone Honda report image to right side of second screen

--- a/index.html
+++ b/index.html
@@ -244,6 +244,13 @@
     <!-- Second Screen -->
     <section class="second-screen">
         <div class="container">
+            <div class="second-screen-content">
+                <div class="second-screen-left">
+                </div>
+                <div class="second-screen-right">
+                    <img src="images/iphone-honda-report.jpg" alt="iPhone with Honda CR-V Report" class="second-screen-image">
+                </div>
+            </div>
         </div>
     </section>
 
