Update image reference to honda.webp

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="second-screen-left">
                 </div>
                 <div class="second-screen-right">
-                    <img src="images/iphone-honda-report.jpg" alt="iPhone with Honda CR-V Report" class="second-screen-image">
+                    <img src="images/honda.webp" alt="iPhone with Honda CR-V Report" class="second-screen-image">
                 </div>
             </div>
         </div>
