Add blue stylish background to left half of second screen

--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
         <div class="container">
             <div class="second-screen-content">
                 <div class="second-screen-left">
+                    <h2 class="second-screen-title">Получите полный отчет</h2>
+                    <p class="second-screen-description">Проверьте историю автомобиля перед покупкой</p>
                 </div>
                 <div class="second-screen-right">
                     <img src="images/honda.webp" alt="iPhone with Honda CR-V Report" class="second-screen-image">
